--- a/.github/workflows/cache-demo.yml
+++ b/.github/workflows/cache-demo.yml
@@ -1,6 +1,6 @@
 name: Cache Demo
 
-on: [push]  # Triggers on any push to any branch
+on: [push]
 
 jobs:
   demo:
@@ -10,15 +10,15 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Prime cache  # This is the required step name
+    - name: prime-cache-5bcf949
       id: prime-cache-5bcf949
       uses: actions/cache@v4
       with:
-        key: cache-5bcf949  # Exact key required
-        path: ~/.npm  # Cache npm dependencies (common example)
+        key: cache-5bcf949
+        path: ~/.npm
         
-    - name: Install dependencies  # This will be fast after first run
-      run: npm ci  # Or use 'npm install', 'pip install -r requirements.txt', etc.
+    - name: Install dependencies
+      run: npm ci
       
-    - name: Verify cache result  # Optional: shows hit/miss
-      run: echo "Cache result: ${{ steps.prime-cache-5bcf949.outputs.cache-hit }}"
+    - name: Show cache result
+      run: echo "Cache hit: ${{ steps.prime-cache-5bcf949.outputs.cache-hit }}"
