--- a/.github/workflows/cache-demo.yml
+++ b/.github/workflows/cache-demo.yml
@@ -7,9 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
+    - uses: actions/checkout@v4
+    
     - name: prime-cache-5bcf949
       id: prime-cache-5bcf949
       uses: actions/cache@v4
@@ -17,8 +16,4 @@ jobs:
         key: cache-5bcf949
         path: ~/.npm
         
-    - name: Install dependencies
-      run: npm ci
-      
-    - name: Show cache result
-      run: echo "Cache hit: ${{ steps.prime-cache-5bcf949.outputs.cache-hit }}"
+    - run: npm ci
