--- a/.github/workflows/cache-demo.yml
+++ b/.github/workflows/cache-demo.yml
@@ -14,6 +14,6 @@ jobs:
       uses: actions/cache@v4
       with:
         key: cache-5bcf949
-        path: ~/.npm
+        path: ~/.cache/demo-deps  # Fake "deps" folder
         
-    - run: npm install  # Changed: Works without package-lock.json
+    - run: mkdir -p ~/.cache/demo-deps && echo "deps installed" > ~/.cache/demo-deps/file.txt
